fixed issue from #573 about field options button remaining visible when disabled fields were hovered

--- a/src/components/field-options/_field-options.scss
+++ b/src/components/field-options/_field-options.scss
@@ -248,6 +248,12 @@
       left: auto;
     }
   }
+
+  &.is-disabled {
+    .btn-actions:not(.is-checkbox) {
+      display: none;
+    }
+  }
 }
 
 // Fieldset (Summary Form) =====================================================
